--- a/rooms.html
+++ b/rooms.html
@@ -15,6 +15,11 @@
     </head>
     <body>
         <div class="box-left"></div>
+        <div id="errorMessages">
+            <p class="error">
+                This is an error message <i class="fa-solid fa-xmark"></i>
+            </p>
+        </div>
         <div class="booking-container">
             <div class="image-container">
                 <img src="./images/resortImg.jpg" alt="" />
