folder structure clean up

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <title>About Parogie</title>
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
         <link rel="stylesheet" href="./css/footeronly.css" />
-        <link rel="stylesheet" href="robin.css" />
+        <link rel="stylesheet" href="./css/robin.css" />
 
         <!-- fontawesome -->
         <script
