--- a/print.html
+++ b/print.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Forms Payment</title>
 
-        <link rel="stylesheet" href="robin.css" />
+        <link rel="stylesheet" href="./css/robin.css" />
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
         <link rel="stylesheet" href="./css/footeronly.css" />
 
