--- a/roomDisplay.html
+++ b/roomDisplay.html
@@ -141,7 +141,7 @@
                 <div class="bookDetails-container">
                     <div class="totalAmount-container">
                         <p>Days of Stay: <span id="daysOfStay"></span></p>
-                        <p>Total Amount Due: <i class="fa-solid fa-peso-sign"></i><span id="totalAmount"><span></p>
+                        <p>Total Amount Due: <span id="totalAmount"><span></p>
                     </div>
                     <div class="roomDisplayTitle">
                         <h2 id="roomTitle">Room1</h2>
