--- a/rooms.html
+++ b/rooms.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Room Reservation</title>
+        <title>Reservation</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <h6>About</h6>
+                        <h3>About</h3>
                         <p class="text-justify">
                             The Parôgiè Boutique Hotel<br />
                             Champ de Mars, 5 Av. Anatole France, 75007 Paris,
@@ -245,7 +245,7 @@
                     </div>
 
                     <div class="col-xs-6 col-md-3">
-                        <h6>Categories</h6>
+                        <h3>Categories</h3>
                         <ul class="footer-links">
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="#">New Normal</a></li>
@@ -283,7 +283,7 @@
                     </div>
 
                     <div class="col-xs-6 col-md-3">
-                        <h6>Quick Links</h6>
+                        <h3>Quick Links</h3>
                         <ul class="footer-links">
                             <li><a href="#">Best Online Rate Guarantee</a></li>
                             <li><a href="#">COVID-19 update</a></li>
