--- a/servicepage.html
+++ b/servicepage.html
@@ -9,19 +9,8 @@
         <!---------- External CSS --------------------->
         <link rel="stylesheet" href="./css/servicepage.css" />
 
-        <!---------- Bootstrap ----------------------->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous"
-        />
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"
-        ></script>
+        <link rel="stylesheet" href="./css/navbarbootstrap.css" />
+        <link rel="stylesheet" href="./css/footeronly.css" />
 
         <!---------- Fontsome Icons --------------------->
         <link
@@ -56,7 +45,19 @@
             href="https://getbootstrap.com/docs/5.2/examples/carousel/"
         />
 
-        <link rel="stylesheet" href="./css/navbarbootstrap.css" />
+        <!---------- Bootstrap ----------------------->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <section>
@@ -226,7 +227,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <h6>About</h6>
+                        <h3>About</h3>
                         <p class="text-justify">
                             The Parôgiè Boutique Hotel<br />
                             Champ de Mars, 5 Av. Anatole France, 75007 Paris,
@@ -295,7 +296,7 @@
                     </div>
 
                     <div class="col-xs-6 col-md-3">
-                        <h6>Categories</h6>
+                        <h3>Categories</h3>
                         <ul class="footer-links">
                             <li><a href="">About Us</a></li>
                             <li><a href="">New Normal</a></li>
@@ -333,7 +334,7 @@
                     </div>
 
                     <div class="col-xs-6 col-md-3">
-                        <h6>Quick Links</h6>
+                        <h3>Quick Links</h3>
                         <ul class="footer-links">
                             <li><a href="">Best Online Rate Guarantee</a></li>
                             <li><a href="">COVID-19 update</a></li>
