added some margins

--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
             </div>
         </section>
 
-        <section id="about4">
+        <section class="mb-5" id="about4">
             <div class="container4">
                 <div class="text-start">
                     <h1 class="text-center">Nearby</h1>
