--- a/print.html
+++ b/print.html
@@ -303,7 +303,7 @@
                 </div> -->
                 <div class="row">
                     <div class="col">
-                        <div>
+                        <div class="my-4">
                             <button class="backBtn">
                                 <a href="./reservationsList.html"
                                     >Go to my reservations</a
@@ -311,7 +311,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col text-end">
+                    <div class="col text-end my-4">
                         <button class="printBtn">
                             PRINT <i class="fa-solid fa-print"></i>
                         </button>
