added page icon

--- a/print.html
+++ b/print.html
@@ -4,12 +4,32 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Forms Payment</title>
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
 
+        <link rel="manifest" href="/site.webmanifest" />
+
+        <!-- external css -->
         <link rel="stylesheet" href="./css/robin.css" />
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
         <link rel="stylesheet" href="./css/footeronly.css" />
 
-        <!-- CSS only -->
+        <!-- bootstrap -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet"
