--- a/servicepage.html
+++ b/servicepage.html
@@ -6,6 +6,26 @@
 
         <title>Parogie Boutique Hotel | Services Page</title>
 
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
+
+        <link rel="manifest" href="/site.webmanifest" />
+
         <!---------- External CSS --------------------->
         <link rel="stylesheet" href="./css/servicepage.css" />
 
