--- a/contactpage.html
+++ b/contactpage.html
@@ -7,6 +7,25 @@
     <meta charset="utf-8">
 
     <title> Parogie Boutique Hotel | Contact Page</title>
+    <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
+
+        <link rel="manifest" href="/site.webmanifest" />
 
     <!---------- External CSS --------------------->
     <link rel="stylesheet" href="./css/navbarbootstrap.css" />
