--- a/reservationsList.html
+++ b/reservationsList.html
@@ -5,6 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Reservations</title>
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
+
+        <link rel="manifest" href="/site.webmanifest" />
 
         <!-- external css -->
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
