--- a/roomDisplay.html
+++ b/roomDisplay.html
@@ -6,6 +6,26 @@
         <title>Room Details</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
+
+        <link rel="manifest" href="/site.webmanifest" />
+
         <!-- fontawesome -->
         <script
             src="https://kit.fontawesome.com/a15ff02c89.js"
