--- a/rooms.html
+++ b/rooms.html
@@ -7,6 +7,26 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./images/favicon.png"
+        />
+
+        <link rel="manifest" href="/site.webmanifest" />
+
         <!-- external css -->
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
         <link rel="stylesheet" href="./css/room.min.css" />
