--- a/print.html
+++ b/print.html
@@ -25,8 +25,9 @@
         <link rel="manifest" href="/site.webmanifest" />
 
         <!-- external css -->
-        <link rel="stylesheet" href="./css/robin.css" />
+
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
+        <link rel="stylesheet" href="./css/robin.css" />
         <link rel="stylesheet" href="./css/footeronly.css" />
 
         <!-- bootstrap -->
@@ -576,6 +577,14 @@
             </div>
         </footer>
         <!-- footer end -->
+
+        <!-- bootstrap js -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            crossorigin="anonymous"
+        ></script>
+
         <script src="./js/form.js"></script>
         <script src="./js/print.js"></script>
         <script
