--- a/reservationsList.html
+++ b/reservationsList.html
@@ -64,7 +64,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="./rooms.html">Rooms</a>
                     </li>
                     <li class="centered-logo nav-item">
-                        <a href="#">
+                        <a href="./index.html">
                             <div class="logo">
                                 <img
                                     src="./images/parogielogo2.png"
