--- a/servicepage.html
+++ b/servicepage.html
@@ -100,7 +100,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">About Us</a>
@@ -109,7 +109,7 @@
                             <a class="nav-link" href="./rooms.html">Rooms</a>
                         </li>
                         <li class="centered-logo nav-item">
-                            <a href="#">
+                            <a href="./index.html">
                                 <div class="logo">
                                     <img
                                         src="./images/parogielogo2.png"
@@ -240,6 +240,15 @@
                     </p>
                 </div>
             </section>
+        </div>
+
+        <div class="text-center mx-auto my-5">
+            <a
+                href="./gallery.html"
+                class="button text-center"
+                id="gallerybutton"
+                >GALLERY</a
+            >
         </div>
 
         <!------------- Footer ----------------------->
