--- a/contactpage.html
+++ b/contactpage.html
@@ -57,7 +57,7 @@
   
     <!------- Navigation Bar *Web Size*------------->
     <nav
-    class="navbar navbar-expand-lg navbar-light"
+    class="navbar navbar-expand-lg navbar-light p-2"
     style="background-color: #132642"
 >
     <button
