--- a/rooms.html
+++ b/rooms.html
@@ -49,7 +49,7 @@
     <body>
         <!------- Navigation Bar *Web Size*------------->
         <nav
-            class="navbar navbar-expand-lg navbar-light"
+            class="navbar navbar-expand-lg navbar-light p-2"
             style="background-color: #132642"
         >
             <button
