font icon update

--- a/gallery.html
+++ b/gallery.html
@@ -40,9 +40,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
     <!---------- Fontsome Icons --------------------->
-  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
 
-
+    <!-- fontawesome -->
+    <script
+    src="https://kit.fontawesome.com/a15ff02c89.js"
+    crossorigin="anonymous"
+    ></script>
 
     <!---------- Google Fonts ------------------------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
