--- a/servicepage.html
+++ b/servicepage.html
@@ -33,12 +33,18 @@
         <link rel="stylesheet" href="./css/footeronly.css" />
 
         <!---------- Fontsome Icons --------------------->
-        <link
+        <!-- <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
             integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
             crossorigin="anonymous"
-        />
+        /> -->
+
+        <!-- fontawesome -->
+        <script
+            src="https://kit.fontawesome.com/a15ff02c89.js"
+            crossorigin="anonymous"
+        ></script>
 
         <!---------- Google Fonts ------------------------>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
