--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Home</title>
-
         <!--CSS styles-->
         <!-- <link rel="stylesheet" media="all" href="css/bootstrap.css" /> -->
         <link rel="stylesheet" media="all" href="css/animate.css" />
@@ -17,12 +16,18 @@
         <link rel="stylesheet" media="all" href="css/theme.css" />
 
         <!---------- Fontsome Icons --------------------->
-        <link
+        <!-- <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
             integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
             crossorigin="anonymous"
-        />
+        /> -->
+
+        <!-- fontawesome -->
+        <script
+            src="https://kit.fontawesome.com/a15ff02c89.js"
+            crossorigin="anonymous"
+        ></script>
 
         <!---------- Google Fonts ------------------------>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,10 +46,11 @@
         <!---------- External CSS --------------------->
         <link rel="stylesheet" href="./css/navbarbootstrap.css" />
 
-        <!-- <link rel="stylesheet" href="./css/card.css" /> -->
-        <link rel="stylesheet" href="./css/footeronly.css" />
         <!-- General css -->
         <link rel="stylesheet" href="./css/robin.css" />
+
+        <!-- <link rel="stylesheet" href="./css/card.css" /> -->
+        <link rel="stylesheet" href="./css/footeronly.css" />
 
         <!-- card css -->
 
