payment form validation update

--- a/form.html
+++ b/form.html
@@ -108,12 +108,14 @@
                             id="firstname"
                             placeholder="First name:*"
                             class="form-control mytext mx-1 mt-3"
+                            required
                         />
                         <input
                             type="text"
                             id="lastname"
                             placeholder="Last name:*"
                             class="form-control ms-1 mytext mt-3"
+                            required
                         />
                     </div>
 
@@ -122,6 +124,7 @@
                         id="company"
                         placeholder="Company name:"
                         class="form-control mytext mx-1"
+                        required
                     />
                     <div class="d-flex flex-column flex-md-row">
                         <input
@@ -129,12 +132,14 @@
                             id="zipcode"
                             placeholder="Zip code: *"
                             class="form-control me-1 mt-3 mytext"
+                            required
                         />
                         <input
                             type="text"
                             id="city"
                             placeholder="City:*"
                             class="form-control ms-1 mt-3 mytext"
+                            required
                         />
                     </div>
                     <div class="d-flex flex-column flex-md-row">
@@ -143,12 +148,14 @@
                             id="email"
                             placeholder="Email:*"
                             class="form-control me-1 mt-3 mytext"
+                            required
                         />
                         <input
                             type="text"
                             id="phone"
                             placeholder="Phone:*"
                             class="form-control ms-1 mt-3 mytext"
+                            required
                         />
                     </div>
                     <div class="pt-4">
@@ -223,6 +230,7 @@
                                     id="cardNumber"
                                     class="form-control mytext"
                                     placeholder="e-Card Number"
+                                    required
                                 />
                                 <div class="d-flex mt-3">
                                     <input
@@ -230,12 +238,14 @@
                                         id="expiration"
                                         class="form-control mytext w-75 me-1"
                                         placeholder="MM/YY "
+                                        required
                                     />
                                     <input
                                         type="text"
                                         id="CVC"
                                         class="form-control mytext w-25 ms-1"
                                         placeholder="CVC"
+                                        required
                                     />
                                 </div>
                             </div>
